Added images and content

--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Replace with your site name</title>
+    <title>Ashleys Art Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        
+        <h2>Ashley's Art Portfolio</h2>
+        <nav>
+            <ul>
+                <li><a href="about.html">&#10084; About Me :D</a></li>
+                <li><a href="digitalart.html">&#10084; Digital Art</a></li>
+                <li><a href="tradart.html">&#10084; Traditional Art</a></li>
+                <li><a href="painting.html">&#10084; Paintings</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-
+        <h1>Welcome to my Art World!</h1>
     </main>
 
     <footer>
-
+        &COPY; Copyright 2024 Ashley Iparraguirre except as noted in credits
     </footer>
 </body>
 </html>
